# semantic_object_maps

./: .gitignore  README.md
lvr_plane_classifier/: CMakeLists.txt  CMakeLists.txt~  config.xml  package.xml
lvr_plane_classifier/rviz/: semantic_furniture_recognition.rviz
lvr_plane_classifier/src/: LVRClassifierNode.cpp
semantic_furniture_classifier/: CMakeLists.txt  build.gradle  buildscript.gradle  package.xml  settings.gradle
semantic_furniture_classifier/gradle/wrapper/: gradle-wrapper.properties
semantic_furniture_classifier/semantic_furniture_classifier_project/: build.gradle  logging.properties  pellet.properties
semantic_furniture_classifier/semantic_furniture_classifier_project/owl/: furniture.owl  furniture.pprj
semantic_furniture_classifier/semantic_furniture_classifier_project/src/main/java/com/github/semantic_furniture_classifier/semantic_furniture_classifier_project/: InvalidInputDataException.java  SemanticFurnitureClassifier.java  SemanticFurnitureClassifierNode.java
semantic_furniture_classifier/semantic_furniture_classifier_project/test_data/: FILE_FORMAT.txt  joachims_office_kinect_10M_filtered.planes.txt  planes.txt
semantic_object_maps_msgs/: CMakeLists.txt  package.xml
semantic_object_maps_msgs/msg/: PlanarPatch.msg  PlanarPatchArray.msg
