<?xml version="1.0"?>
<package>
  <name>semantic_furniture_classifier</name>
  <version>0.1.0</version>
  <description>Furniture classification using OWL-DL</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/uos/semantic_object_maps</url>
  <url type="repository">https://github.com/uos/semantic_object_maps.git</url>
  <url type="bugtracker">https://github.com/uos/semantic_object_maps/issues</url>

  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>semantic_object_maps_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>genjava</build_depend>

  <run_depend>semantic_object_maps_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
