<?xml version="1.0"?>
<package>
  <name>semantic_object_maps_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for semantic object maps</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/uos/semantic_object_maps</url>
  <url type="repository">https://github.com/uos/semantic_object_maps.git</url>
  <url type="bugtracker">https://github.com/uos/semantic_object_maps/issues</url>

  <author email="martin.guenther@dfki.de">Martin Guenther</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
